Fixed issue where a horizontal scrollbar appeared on mobile sizes in rental page. Removed unnessesary divs from rental.

--- a/src/components/Rental/Rental.css
+++ b/src/components/Rental/Rental.css
@@ -13,14 +13,6 @@
   justify-self: flex-start;
 }
 
-.rental-page .main-section {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  margin-bottom: 20px;
-}
-
 .rental-page .main-body {
   width: 100%;
   display: flex;
@@ -29,6 +21,7 @@
   align-items: flex-start;
   gap: 12px;
   max-width: 1600px;
+  margin-bottom: var(--spacing-xl);
 }
 
 
@@ -42,6 +35,7 @@
   align-items: center;
   margin: 1rem auto 1rem auto;
   text-align: center;
+  z-index: 0;
 }
 
 .rental-page .no-cars-message::before {
@@ -117,6 +111,7 @@
 .rental-page .sorting-inputs {
   display: flex;
   flex-direction: row;
+  z-index: 0;
 }
 
 .rental-page .sort-button {
@@ -159,8 +154,7 @@
   margin-bottom: -2px;
 }
 
-.rental-page .filter-button:hover svg {
-}
+
 
 /* Filter panel styles */
 .rental-page .filter-panel {
@@ -369,12 +363,18 @@
 }
 
 @media screen and (max-width: 1000px) {
-  .rental-page {
-    max-width: 999999px;
-    min-width: 1px;
+
+
+  .rental-page .main-body {
+    max-width: 100%;
     width: 100%;
+    min-width: 100%;
     align-items: center;
     justify-content: center;
+  }
+
+  .rental-page .sort-bar {
+    width: 90%;
   }
 
   .rental-page .sort-button {
